# rules_pandoc

./: .bazelrc  .gitattributes  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  pages.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: BUILD.bazel  api.md  page.bzl  rules.md
docs/_includes/: footer.html  header.html  index.css  nav.html  page.css
docs/_templates/: html.m4  index.html  index.in.html  page.html  page.in.html
docs/assets/: stardoc.css
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  metadata.yaml
mylang/: repositories.bzl
mylang/private/: toolchains_repo.bzl
pandoc/: BUILD.bazel  defs.bzl  repositories.bzl
pandoc/private/: BUILD.bazel  pandoc.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
pandoc/tests/: versions_test.bzl
