"Bazel dependencies"

module(
    name = "rules_pandoc",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "package_metadata", version = "0.0.6")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)
bazel_dep(name = "rules_testing", version = "0.9.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)

pandoc = use_extension("//pandoc:extensions.bzl", "pandoc")
pandoc.toolchain(pandoc_version = "3.8.2.1")
use_repo(pandoc, "pandoc_toolchains")

register_toolchains("@pandoc_toolchains//:all")
