load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load(":page.bzl", "page")

copy_to_bin(
    name = "assets",
    srcs = glob(["assets/*"]),
)

page(
    name = "index_html",
    src = "//:README.md",
    out = "index.html",
    args = [
        "--toc=false",
        "--shift-heading-level-by=-1",
    ],
    template = "//docs:_templates/index.html",
)

page(
    name = "api_html",
    src = ":api.md",
    out = "api.html",
    args = [
        "--toc=true",
        "--css=assets/stardoc.css",
    ],
    title = "API",
)

page(
    name = "contribute_html",
    src = "//:CONTRIBUTING.md",
    out = "contribute.html",
    args = [
        "--toc=true",
    ],
    title = "Contribute",
)

filegroup(
    name = "docs",
    srcs = [
        ":api_html",
        ":assets",
        ":contribute_html",
        ":index_html",
    ],
)

copy_to_directory(
    name = "public",
    srcs = [":docs"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "page",
    srcs = ["page.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//pandoc:defs"],
)
