load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "pandoc",
    srcs = ["pandoc.bzl"],
    visibility = ["//pandoc:__subpackages__"],
    deps = [
        "@bazel_lib//lib:expand_make_vars",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//pandoc:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//pandoc:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//pandoc:__subpackages__"],
)
